<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Titles -->
    
    <string name="app_name">Cheetah Feeds</string>
    <string name="title_crossfade">Simple Crossfade</string>
    <string name="title_card_flip">Card Flip</string>
    <string name="title_screen_slide">Screen Slide</string>
    <string name="title_zoom">Zoom</string>
    <string name="title_layout_changes">Layout Changes</string>
    <string name="title_template_step"> <xliff:g id="step_name">%2$s</xliff:g></string>
   
	<!-- Menu -->
	<string name="logout">Logout</string>
	<string name="update">Update</string>
	
    <!-- Actions -->
    <string name="action_toggle">Toggle indicator</string>
    <string name="action_add_item">Add item</string>
    <string name="action_remove_item">Remove item</string>
    <string name="action_previous">Feed News</string>
    <string name="action_next">Add/Remove</string>
    <string name="action_finish">Finish</string>
    <string name="action_info">Photo info</string>
    <string name="action_photo">View photo</string>

    <!-- Messages -->
    <string name="message_empty_layout_changes">Add an item above to get started.</string>
    <string name="message_zoom_touch_expand">Touch a photo to expand it.</string>

    <!-- Accessibility-only descriptions -->
    <string name="description_image_1">Image 1</string>
    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>

    <!-- Other strings -->
    <string name="card_back_title">Angry Red Android</string>
    <string name="card_back_description"><![CDATA[Nana]]></string>
    <string name="lorem_ipsum"> hi hi hi</string>
    <string name="lorem_ipsu"> yo yo yo</string>
    <!--  page1 -->
    <string name="urlname">URL</string>
    <color name="grey">#E4E0E0</color>
    <string name="rss">RSS</string>
     <string name="atom">Atom</string>
     <color name="white">#C0C0C0</color>  
     <string name="button"></string>
     <string name="app_name1">app_name1</string>  
     <color name="buttonColor">#F0F8FF</color>
     <string name="subscribedfeeds">Subscribed Feeds</string>
     
     <!-- log in -->
      <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="updateFeeds">Update Feeds</string>

</resources>
