<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_background"
    android:id="@+id/mainLayout"
    tools:context=".MainActivity" >
    
    
    
    <ScrollView 
        android:layout_width="500dip"
        android:layout_height="500dip">
    
<LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView android:id="@+id/accounts_tester_account_types_spinner_label"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/account"/>

        <Spinner
            android:id="@+id/accounts_tester_account_types_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        </LinearLayout>
    
    <LinearLayout 
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"/>
         
    </LinearLayout>
    
</LinearLayout>
</ScrollView>
    

    <Button
        android:layout_marginTop="600dip"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#F0F8FF" 
        android:paddingLeft="20dip"
         android:paddingRight="20dip"
         android:background="@drawable/loginbutton"
         android:paddingTop="20dip"
          android:paddingBottom="20dip"
        android:layout_marginLeft="170dip"
        android:text="@string/button"
        android:textSize="40dp" />

</RelativeLayout>
